// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Tag /> should display autoComplete 1`] = `
<div>
  <span
    class="tag-container"
    style="color: rgb(235, 121, 8); border: 1px solid rgb(235, 121, 8);"
  >
    <span
      class="tag-text"
    >
      Auto Complete
    </span>
  </span>
</div>
`;

exports[`<Tag /> should display draft 1`] = `
<div>
  <span
    class="tag-container"
    style="color: rgb(0, 120, 212); border: 1px solid rgb(0, 120, 212);"
  >
    <span
      class="tag-text"
    >
      Draft
    </span>
  </span>
</div>
`;

exports[`<Tag /> should display mergeConflict 1`] = `
<div>
  <span
    class="tag-container"
    style="color: rgb(218, 30, 40); border: 1px solid rgb(218, 30, 40);"
  >
    <span
      class="tag-text"
    >
      Merge Conflict
    </span>
  </span>
</div>
`;
